Fix progress bar layout on narrow screens.

--- a/wallboard-app/src/app/talk-progress.component.sass
+++ b/wallboard-app/src/app/talk-progress.component.sass
@@ -1,2 +1,6 @@
+
+.progress-bar
+    background-color: #02421a
+
 .progress
-    width: 300px
+    background-color: rgba(255, 255, 255, 0.4)
